# tunnel-manager

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  index.html  inventory.example.yaml  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  ruff_errors.txt  sitemap.xml
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  inventory.md  legacy_readme.md  overview.md  teleport_architecture.md  usage.md
installation/: index.html
inventory/: index.html
legacy_readme/: index.html
overview/: index.html
scripts/: validate_a2a_agent.py  validate_agent.py
search/: search_index.json
teleport_architecture/: index.html
tests/: conftest.py  test_action_discovery.py  test_advanced_file_manager.py  test_agent_server.py  test_concept_parity.py  test_inventory_cli.py  test_mcp_server.py  test_operation_manager.py  test_security_auditor.py  test_system_intelligence.py  test_tunnel.py  test_tunnel_manager.py
tunnel_manager/: __init__.py  __main__.py  advanced_file_manager.py  agent.py  agent_server.py  async_tunnel.py  mcp.py  mcp_config.json  mcp_server.py  models.py  operation_manager.py  security_auditor.py  system_intelligence.py  tools.py  tunnel_manager.py  tunnel_manager_a2a.py  tunnel_manager_agent.py  tunnel_manager_mcp.py  utils.py
tunnel_manager/agent/: CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  mcp_config.json
tunnel_manager/agent_data/: IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  templates.py
tunnel_manager/mcp/: __init__.py  mcp_file.py  mcp_host.py  mcp_inventory.py  mcp_operations.py  mcp_remote.py  mcp_security.py  mcp_system.py
tunnel_manager/prompts/: main_agent.json
tunnel_manager/skills/remote-access/: SKILL.md
tunnel_manager/skills/tunnel-starter/: SKILL.md
usage/: index.html
