[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-manager"
version = "1.1.45"
description = "Create SSH Tunnels to your remote hosts and host as an MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.31",
    "fastmcp>=3.0.0b1",
    "paramiko>=4.0.0"]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.31"]

agent = [
    "agent-utilities[agent,logfire]>=0.2.31"]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.31"]

[project.scripts]
tunnel-manager = "tunnel_manager.tunnel_manager:tunnel_manager"
tunnel-manager-mcp = "tunnel_manager.mcp_server:mcp_server"
tunnel-manager-agent = "tunnel_manager.agent_server:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tunnel_manager = [ "mcp_config.json", "agent_data/**"]

[tool.setuptools]
include-package-data = true
