[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-manager"
version = "1.7.1"
description = "Create SSH Tunnels to your remote hosts and host as an MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.14"
dependencies = [ "agent-utilities>=0.6.2", "fastmcp>=3.0.0b1", "paramiko>=4.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.6.2",]
agent = [ "agent-utilities[agent,logfire]>=0.6.2",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.6.2",]
test = [ "pytest", "pytest-asyncio",]

[project.scripts]
tunnel-manager = "tunnel_manager.tunnel_manager:main"
tunnel-manager-mcp = "tunnel_manager.mcp_server:mcp_server"
tunnel-manager-agent = "tunnel_manager.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
tunnel_manager = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
